# bevy_bae

./: Cargo.toml  readme.md
examples/: conditions.rs  follow_cursor.rs  minimal.rs
macros/: Cargo.toml
src/: lib.rs  plan.rs  value_ext.rs
src/condition/: builtin.rs  mod.rs  relationship.rs
src/effect/: mod.rs  relationship.rs
src/plan/: execution.rs  mod.rs  update.rs
src/task/: mod.rs  operator.rs  primitive.rs  relationship.rs  step.rs  validation.rs
src/task/compound/: mod.rs  relationship.rs  select.rs  sequence.rs
tests/: effects.rs  execution.rs  plan.rs  tests.rs
