

[package]
name = "bevy_bae"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = { version = "0.17", default-features = false }
bevy_app = { version = "0.17", default-features = false }

[lints.rust]
#missing_docs = "warn"

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"
# no_std support
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"
