

[package]
name = "bevy_bae"
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
version = "0.0.2"
edition = "2024"
license = "MIT OR Apache-2.0 "
description = "Behavior as entities!"
readme = "readme.md"
repository = "https://github.com/janhohenheim/bevy_bae"
keywords = ["bevy", "ai", "htn"]
categories = ["game-development"]
include = ["/src", "/license*"]

[dependencies]
bevy_ecs = { version = "0.17", default-features = false, features = ["bevy_reflect"] }
bevy_app = { version = "0.17", default-features = false }
bevy_reflect = { version = "0.17", default-features = false }
bevy_derive = { version = "0.17", default-features = false }
bevy_ptr = { version = "0.17", default-features = false }
bevy_utils = { version = "0.17", default-features = false }
tracing = "0.1"

bevy_mod_props = { version = "0.1", git = "https://github.com/NthTensor/trill" }

ustr = { version = "1" }
variadics_please = "1"
disqualified = "1.0.0"

[dev-dependencies]
bevy = { version = "0.17", default-features = true, features = ["track_location"] }

[lints.rust]
missing_docs = "warn"
unused_qualifications = "warn"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
needless_lifetimes = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
nonstandard_macro_braces = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
too_long_first_doc_paragraph = "allow"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
